--- a/csduck/pyduck/community/templates/community/post/edit.html.jinja
+++ b/csduck/pyduck/community/templates/community/post/edit.html.jinja
@@ -2,7 +2,8 @@
 
 
 {% block main %}
-{% set c = sidebar_community|selectattr("code", "eq", category)|list|first %}
+{% set c = sidebar_community | selectattr("code", "eq", "life") | list | first %}
+{% set t = post.tags | map(attribute="name") | join(', ') %}
 <div class="container">
     <div class="bg-primary-subtle rounded-2 mt-3 p-3">
         <div class="fs-4 fw-bold">
@@ -16,32 +17,32 @@
     <div class="row">
         <div class="col">
             <div class="pt-3">
-                <div class="fs-4 fw-bold">
-                    <i class="bi bi-pencil-square"></i> 글 쓰는 중
+                <div class="fs-4 fw-bold text-warning">
+                    <i class="bi bi-pencil-square"></i> 글 수정 중
                 </div>
-                <form action="{{ url_for('pyduck.community.post_new', category=c.code) }}" method="POST">
+                <form action="{{ url_for('pyduck.community.post_edit', post_id=post.id) }}" method="POST">
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                     <div class="pt-3">
                         <label for="title" class="form-label fw-bold">글 제목<sup class="text-danger">*</sup></label>
                         <input type="text" class="form-control" id="title" name="title" placeholder="제목을 적어주세요."
-                               minlength="2" maxlength="50" required data-prevent-enter-submit>
+                               minlength="2" maxlength="50" value="{{ post.title }}" required>
                     </div>
                     <div>
                         <div class="pt-3">
                             <label for="title" class="form-label fw-bold">관련 키워드(태그)</label>
-                            <input class="form-control form-control-sm" name="tags">
+                            <input class="form-control form-control-sm" name="tags" value="{{ t }}">
                         </div>
                         <div class="pt-3">
                             <label for="title" class="form-label fw-bold">글 내용<sup class="text-danger">*</sup></label>
-                            <textarea id="editor" name="content" placeholder="글 내용을 적어주세요."></textarea>
+                            <textarea id="editor" name="content">{{ post.content }}</textarea>
                         </div>
                         <div class="pt-3 text-end">
                             <a type="button" class="btn btn-secondary rounded-0"
-                               href="{{ url_for('pyduck.community.index', category=c.code) }}">
+                               href="{{ url_for('pyduck.community.post', post_id=post.id) }}">
                                 취소하기
                             </a>
-                            <button class="btn btn-primary rounded-0">
-                                등록하기
+                            <button class="btn btn-warning rounded-0">
+                                수정하기
                             </button>
                         </div>
                     </div>
@@ -54,12 +55,11 @@
 
 
 {% block javascript %}
-{{ super() }}
 <script>
     ClassicEditor
         .create(document.querySelector("#editor"), {
             simpleUpload: {
-                uploadUrl: "{{ url_for('pyduck.community.image_upload', category='help') }}",
+                uploadUrl: "{{ url_for('pyduck.community.image_upload', category='life') }}",
                 headers: {
                     'X-CSRF-TOKEN': "{{ csrf_token() }}"
                 }
