--- a/csduck/pyduck/templates/pyduck/data/sidebar.html.jinja
+++ b/csduck/pyduck/templates/pyduck/data/sidebar.html.jinja
@@ -1,7 +1,7 @@
 {% set sidebar_community = [
 {
 "code": "all",
-"emoji": "💬",
+"emoji": "📋",
 "name": "글들 다보기",
 "description": "모든 카테고리를 보실 수 있습니다 :)"
 },
@@ -17,10 +17,17 @@
 "name": "사는 이야기",
 "description": "개발자로서 혹은 그냥 사람으로 사는 이야기를 나누는 공간입니다."
 },
-{"code": "knowledge",
+{
+"code": "knowledge",
 "emoji": "⛏️",
-"name": "삽질 나누기",
+"name": "경험 나누기",
 "description": "파이썬 관련 지식 혹은 프로그래밍 관련 지식을 공유하는 공간입니다."
+},
+{
+"code": "tech",
+"emoji": "✨",
+"name": "기술 이야기",
+"description": "파이썬 관련 생태계 및 그 외 다양한 기술에 대해 이야기 하는 공간입니다."
 }
 ]%}
 
