before production: just saving

--- a/flow2and4/pyduck/templates/pyduck/base.html.jinja
+++ b/flow2and4/pyduck/templates/pyduck/base.html.jinja
@@ -24,6 +24,12 @@
             display: none;
         }
 
+        /* base.css */
+        img {
+            display: block;
+            max-width: 100%;
+        }
+
         /* Alpine.js */
         [x-cloak] {
             display: none !important;
