--- a/flow2and4/pyduck/templates/pyduck/data/sidebar.html.jinja
+++ b/flow2and4/pyduck/templates/pyduck/data/sidebar.html.jinja
@@ -30,12 +30,24 @@
 "description": "파이썬 관련 생태계 및 그 외 다양한 기술에 대해 이야기 하는 공간입니다."
 }
 ]%}
-
+{# 
 {% set sidebar_learning = [
+{
+"code": "programming",
+"emoji": "⌨️",
+"name": "프로그래밍",
+"description": "모든 카테고리를 보실 수 있습니다 :)"
+},
+{
+"code": "crud",
+"emoji": "⌨️",
+"name": "CRUD",
+"description": "모든 카테고리를 보실 수 있습니다 :)"
+},
 {
 "code": "dsna",
 "emoji": "🧮",
-"name": "자료구조/알고리즘",
+"name": "자료구조와 알고리즘",
 "description": "모든 카테고리를 보실 수 있습니다 :)"
 }
 ]%}
@@ -48,4 +60,4 @@
 "name": "블로그",
 "description": "pythonista들의 블로그 내용을 전합니다. :)"
 }
-]%}
+]%} #}
