--- a/flow2and4/pyduck/templates/pyduck/footer/footer.html.jinja
+++ b/flow2and4/pyduck/templates/pyduck/footer/footer.html.jinja
@@ -6,7 +6,7 @@
             </div>
             <div>
                 <a class="btn btn-outline-secondary border-0 px-2 py-1"
-                   href="https://github.com/kssflow/csduck"
+                   href="https://github.com/kssflow/flow2and4/tree/main/flow2and4/pyduck"
                    target="_blank">
                     <span class="fs-4"><i class="bi bi-github"></i></span>
                 </a>
