--- a/flow2and4/pyduck/templates/pyduck/header/header.html.jinja
+++ b/flow2and4/pyduck/templates/pyduck/header/header.html.jinja
@@ -78,6 +78,17 @@
                             </a>
                         </li>
                         <li>
+                            <a class="dropdown-item d-flex align-items-center"
+                               href="{{ url_for('pyduck.auth.profile_setting') }}">
+                                <div class="ps-3 fs-4 fw-bold">
+                                    <i class="bi bi-database-fill-up"></i>
+                                </div>
+                                <div class="ps-4">
+                                    <span>내 활동 내역</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
                             <hr class="dropdown-divider">
                         </li>
                         <li>
