--- a/flow2and4/pyduck/templates/pyduck/sidebar/sidebar.html.jinja
+++ b/flow2and4/pyduck/templates/pyduck/sidebar/sidebar.html.jinja
@@ -22,7 +22,7 @@
     <button class="btn btn-outline-info border-0 w-100 rounded-0" type="button"
             data-bs-toggle="collapse"
             data-bs-target="#learning" aria-expanded="false" aria-controls="collapseExample">
-        <div class="fw-bold fs-5">같이 배우기</div>
+        <div class="fw-bold fs-5">파이썬으로 배우는..</div>
     </button>
     <div class="collapse show pt-1" id="learning">
         <ul class="nav flex-column nav-pills nav-fill">
